// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scroll should hide icon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Scroll
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={true}
    isActive={false}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Scroll should render when active and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Scroll
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={true}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Circle
          cx="207.5"
          cy="55"
          fill="#FFFFFF"
          fillOpacity="0.5"
          r="55"
        />,
        <Path
          d="M236.6,22h-50c-3.6,0-6.5,2.9-6.5,6.5V75h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V35h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,22,236.6,22z M183.1,28.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V75h-3.5h-43.5V28.5z M173.1,81.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,85,173.1,83.4,173.1,81.5z M226.6,85 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,83.4,228.5,85,226.6,85z M236.6,32h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,32,236.6,32z"
          fill="#FFFFFF"
        />,
        <React.Fragment>
          <Polygon
            fill="#FFFFFF"
            points="217.9,29.6 214.8,32.7 211.7,29.6 209.6,31.7 212.7,34.8 209.7,37.9 211.8,40 214.8,36.9 217.9,40 220,37.9 217,34.8 220.1,31.7 	"
          />
          <Path
            d="M203.1,59.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,57.9,203.9,58.8,203.1,59.8z"
            fill="#FFFFFF"
          />
          <Path
            d="M205.4,45.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,42,205.7,43.4,205.4,45.1z"
            fill="#FFFFFF"
          />
          <Path
            d="M208.3,49.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V49.3z"
            fill="#FFFFFF"
          />
          <Path
            d="M197.6,60.9c-2.7,0-4.9,2.2-4.9,4.9c0,2.7,2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,60.9,197.6,60.9z M197.6,67.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,67.8,197.6,67.8z"
            fill="#FFFFFF"
          />
        </React.Fragment>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "207.5",
          "cy": "55",
          "fill": "#FFFFFF",
          "fillOpacity": "0.5",
          "r": "55",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M236.6,22h-50c-3.6,0-6.5,2.9-6.5,6.5V75h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V35h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,22,236.6,22z M183.1,28.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V75h-3.5h-43.5V28.5z M173.1,81.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,85,173.1,83.4,173.1,81.5z M226.6,85 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,83.4,228.5,85,226.6,85z M236.6,32h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,32,236.6,32z",
          "fill": "#FFFFFF",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Polygon
              fill="#FFFFFF"
              points="217.9,29.6 214.8,32.7 211.7,29.6 209.6,31.7 212.7,34.8 209.7,37.9 211.8,40 214.8,36.9 217.9,40 220,37.9 217,34.8 220.1,31.7 	"
            />,
            <Path
              d="M203.1,59.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,57.9,203.9,58.8,203.1,59.8z"
              fill="#FFFFFF"
            />,
            <Path
              d="M205.4,45.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,42,205.7,43.4,205.4,45.1z"
              fill="#FFFFFF"
            />,
            <Path
              d="M208.3,49.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V49.3z"
              fill="#FFFFFF"
            />,
            <Path
              d="M197.6,60.9c-2.7,0-4.9,2.2-4.9,4.9c0,2.7,2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,60.9,197.6,60.9z M197.6,67.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,67.8,197.6,67.8z"
              fill="#FFFFFF"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "fill": "#FFFFFF",
              "points": "217.9,29.6 214.8,32.7 211.7,29.6 209.6,31.7 212.7,34.8 209.7,37.9 211.8,40 214.8,36.9 217.9,40 220,37.9 217,34.8 220.1,31.7 	",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M203.1,59.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,57.9,203.9,58.8,203.1,59.8z",
              "fill": "#FFFFFF",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M205.4,45.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,42,205.7,43.4,205.4,45.1z",
              "fill": "#FFFFFF",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M208.3,49.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V49.3z",
              "fill": "#FFFFFF",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M197.6,60.9c-2.7,0-4.9,2.2-4.9,4.9c0,2.7,2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,60.9,197.6,60.9z M197.6,67.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,67.8,197.6,67.8z",
              "fill": "#FFFFFF",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Circle
            cx="207.5"
            cy="55"
            fill="#FFFFFF"
            fillOpacity="0.5"
            r="55"
          />,
          <Path
            d="M236.6,22h-50c-3.6,0-6.5,2.9-6.5,6.5V75h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V35h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,22,236.6,22z M183.1,28.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V75h-3.5h-43.5V28.5z M173.1,81.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,85,173.1,83.4,173.1,81.5z M226.6,85 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,83.4,228.5,85,226.6,85z M236.6,32h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,32,236.6,32z"
            fill="#FFFFFF"
          />,
          <React.Fragment>
            <Polygon
              fill="#FFFFFF"
              points="217.9,29.6 214.8,32.7 211.7,29.6 209.6,31.7 212.7,34.8 209.7,37.9 211.8,40 214.8,36.9 217.9,40 220,37.9 217,34.8 220.1,31.7 	"
            />
            <Path
              d="M203.1,59.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,57.9,203.9,58.8,203.1,59.8z"
              fill="#FFFFFF"
            />
            <Path
              d="M205.4,45.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,42,205.7,43.4,205.4,45.1z"
              fill="#FFFFFF"
            />
            <Path
              d="M208.3,49.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V49.3z"
              fill="#FFFFFF"
            />
            <Path
              d="M197.6,60.9c-2.7,0-4.9,2.2-4.9,4.9c0,2.7,2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,60.9,197.6,60.9z M197.6,67.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,67.8,197.6,67.8z"
              fill="#FFFFFF"
            />
          </React.Fragment>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "207.5",
            "cy": "55",
            "fill": "#FFFFFF",
            "fillOpacity": "0.5",
            "r": "55",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M236.6,22h-50c-3.6,0-6.5,2.9-6.5,6.5V75h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V35h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,22,236.6,22z M183.1,28.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V75h-3.5h-43.5V28.5z M173.1,81.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,85,173.1,83.4,173.1,81.5z M226.6,85 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,83.4,228.5,85,226.6,85z M236.6,32h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,32,236.6,32z",
            "fill": "#FFFFFF",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Polygon
                fill="#FFFFFF"
                points="217.9,29.6 214.8,32.7 211.7,29.6 209.6,31.7 212.7,34.8 209.7,37.9 211.8,40 214.8,36.9 217.9,40 220,37.9 217,34.8 220.1,31.7 	"
              />,
              <Path
                d="M203.1,59.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,57.9,203.9,58.8,203.1,59.8z"
                fill="#FFFFFF"
              />,
              <Path
                d="M205.4,45.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,42,205.7,43.4,205.4,45.1z"
                fill="#FFFFFF"
              />,
              <Path
                d="M208.3,49.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V49.3z"
                fill="#FFFFFF"
              />,
              <Path
                d="M197.6,60.9c-2.7,0-4.9,2.2-4.9,4.9c0,2.7,2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,60.9,197.6,60.9z M197.6,67.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,67.8,197.6,67.8z"
                fill="#FFFFFF"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "fill": "#FFFFFF",
                "points": "217.9,29.6 214.8,32.7 211.7,29.6 209.6,31.7 212.7,34.8 209.7,37.9 211.8,40 214.8,36.9 217.9,40 220,37.9 217,34.8 220.1,31.7 	",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M203.1,59.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,57.9,203.9,58.8,203.1,59.8z",
                "fill": "#FFFFFF",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M205.4,45.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,42,205.7,43.4,205.4,45.1z",
                "fill": "#FFFFFF",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M208.3,49.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V49.3z",
                "fill": "#FFFFFF",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M197.6,60.9c-2.7,0-4.9,2.2-4.9,4.9c0,2.7,2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,60.9,197.6,60.9z M197.6,67.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,67.8,197.6,67.8z",
                "fill": "#FFFFFF",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Scroll should render when inactive and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Scroll
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={false}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M236.6,47h-50c-3.6,0-6.5,2.9-6.5,6.5V100h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V60h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,47,236.6,47z M183.1,53.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V100h-3.5h-43.5V53.5z M173.1,106.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,110,173.1,108.4,173.1,106.5z M226.6,110 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,108.4,228.5,110,226.6,110z M236.6,57h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,57,236.6,57z"
          fill="#DDDDDD"
        />,
        <Polygon
          fill="#DDDDDD"
          points="217.9,54.6 214.8,57.7 211.7,54.6 209.6,56.7 212.7,59.8 209.7,62.9 211.8,65 214.8,61.9 217.9,65 220,62.9 217,59.8 220.1,56.7 	"
        />,
        <Path
          d="M203.1,84.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,82.9,203.9,83.8,203.1,84.8z"
          fill="#DDDDDD"
        />,
        <Path
          d="M205.4,70.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,67,205.7,68.4,205.4,70.1z"
          fill="#DDDDDD"
        />,
        <Path
          d="M208.3,74.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V74.3z"
          fill="#DDDDDD"
        />,
        <Path
          d="M197.6,85.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,85.9,197.6,85.9z M197.6,92.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,92.8,197.6,92.8z"
          fill="#DDDDDD"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M236.6,47h-50c-3.6,0-6.5,2.9-6.5,6.5V100h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V60h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,47,236.6,47z M183.1,53.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V100h-3.5h-43.5V53.5z M173.1,106.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,110,173.1,108.4,173.1,106.5z M226.6,110 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,108.4,228.5,110,226.6,110z M236.6,57h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,57,236.6,57z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "points": "217.9,54.6 214.8,57.7 211.7,54.6 209.6,56.7 212.7,59.8 209.7,62.9 211.8,65 214.8,61.9 217.9,65 220,62.9 217,59.8 220.1,56.7 	",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M203.1,84.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,82.9,203.9,83.8,203.1,84.8z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M205.4,70.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,67,205.7,68.4,205.4,70.1z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M208.3,74.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V74.3z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M197.6,85.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,85.9,197.6,85.9z M197.6,92.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,92.8,197.6,92.8z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M236.6,47h-50c-3.6,0-6.5,2.9-6.5,6.5V100h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V60h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,47,236.6,47z M183.1,53.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V100h-3.5h-43.5V53.5z M173.1,106.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,110,173.1,108.4,173.1,106.5z M226.6,110 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,108.4,228.5,110,226.6,110z M236.6,57h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,57,236.6,57z"
            fill="#DDDDDD"
          />,
          <Polygon
            fill="#DDDDDD"
            points="217.9,54.6 214.8,57.7 211.7,54.6 209.6,56.7 212.7,59.8 209.7,62.9 211.8,65 214.8,61.9 217.9,65 220,62.9 217,59.8 220.1,56.7 	"
          />,
          <Path
            d="M203.1,84.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,82.9,203.9,83.8,203.1,84.8z"
            fill="#DDDDDD"
          />,
          <Path
            d="M205.4,70.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,67,205.7,68.4,205.4,70.1z"
            fill="#DDDDDD"
          />,
          <Path
            d="M208.3,74.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V74.3z"
            fill="#DDDDDD"
          />,
          <Path
            d="M197.6,85.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,85.9,197.6,85.9z M197.6,92.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,92.8,197.6,92.8z"
            fill="#DDDDDD"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M236.6,47h-50c-3.6,0-6.5,2.9-6.5,6.5V100h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V60h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,47,236.6,47z M183.1,53.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V100h-3.5h-43.5V53.5z M173.1,106.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,110,173.1,108.4,173.1,106.5z M226.6,110 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,108.4,228.5,110,226.6,110z M236.6,57h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,57,236.6,57z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "points": "217.9,54.6 214.8,57.7 211.7,54.6 209.6,56.7 212.7,59.8 209.7,62.9 211.8,65 214.8,61.9 217.9,65 220,62.9 217,59.8 220.1,56.7 	",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M203.1,84.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,82.9,203.9,83.8,203.1,84.8z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M205.4,70.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,67,205.7,68.4,205.4,70.1z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M208.3,74.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V74.3z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M197.6,85.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,85.9,197.6,85.9z M197.6,92.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,92.8,197.6,92.8z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Scroll should render when inactive and pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Scroll
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={false}
    isPressed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M236.6,47h-50c-3.6,0-6.5,2.9-6.5,6.5V100h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V60h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,47,236.6,47z M183.1,53.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V100h-3.5h-43.5V53.5z M173.1,106.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,110,173.1,108.4,173.1,106.5z M226.6,110 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,108.4,228.5,110,226.6,110z M236.6,57h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,57,236.6,57z"
          fill="#EEEEEE"
        />,
        <Polygon
          fill="#EEEEEE"
          points="217.9,54.6 214.8,57.7 211.7,54.6 209.6,56.7 212.7,59.8 209.7,62.9 211.8,65 214.8,61.9 217.9,65 220,62.9 217,59.8 220.1,56.7 	"
        />,
        <Path
          d="M203.1,84.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,82.9,203.9,83.8,203.1,84.8z"
          fill="#EEEEEE"
        />,
        <Path
          d="M205.4,70.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,67,205.7,68.4,205.4,70.1z"
          fill="#EEEEEE"
        />,
        <Path
          d="M208.3,74.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V74.3z"
          fill="#EEEEEE"
        />,
        <Path
          d="M197.6,85.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,85.9,197.6,85.9z M197.6,92.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,92.8,197.6,92.8z"
          fill="#EEEEEE"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M236.6,47h-50c-3.6,0-6.5,2.9-6.5,6.5V100h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V60h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,47,236.6,47z M183.1,53.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V100h-3.5h-43.5V53.5z M173.1,106.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,110,173.1,108.4,173.1,106.5z M226.6,110 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,108.4,228.5,110,226.6,110z M236.6,57h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,57,236.6,57z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#EEEEEE",
          "points": "217.9,54.6 214.8,57.7 211.7,54.6 209.6,56.7 212.7,59.8 209.7,62.9 211.8,65 214.8,61.9 217.9,65 220,62.9 217,59.8 220.1,56.7 	",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M203.1,84.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,82.9,203.9,83.8,203.1,84.8z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M205.4,70.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,67,205.7,68.4,205.4,70.1z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M208.3,74.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V74.3z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M197.6,85.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,85.9,197.6,85.9z M197.6,92.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,92.8,197.6,92.8z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M236.6,47h-50c-3.6,0-6.5,2.9-6.5,6.5V100h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V60h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,47,236.6,47z M183.1,53.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V100h-3.5h-43.5V53.5z M173.1,106.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,110,173.1,108.4,173.1,106.5z M226.6,110 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,108.4,228.5,110,226.6,110z M236.6,57h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,57,236.6,57z"
            fill="#EEEEEE"
          />,
          <Polygon
            fill="#EEEEEE"
            points="217.9,54.6 214.8,57.7 211.7,54.6 209.6,56.7 212.7,59.8 209.7,62.9 211.8,65 214.8,61.9 217.9,65 220,62.9 217,59.8 220.1,56.7 	"
          />,
          <Path
            d="M203.1,84.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,82.9,203.9,83.8,203.1,84.8z"
            fill="#EEEEEE"
          />,
          <Path
            d="M205.4,70.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,67,205.7,68.4,205.4,70.1z"
            fill="#EEEEEE"
          />,
          <Path
            d="M208.3,74.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V74.3z"
            fill="#EEEEEE"
          />,
          <Path
            d="M197.6,85.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,85.9,197.6,85.9z M197.6,92.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,92.8,197.6,92.8z"
            fill="#EEEEEE"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M236.6,47h-50c-3.6,0-6.5,2.9-6.5,6.5V100h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V60h3.5 c3.6,0,6.5-2.9,6.5-6.5S240.2,47,236.6,47z M183.1,53.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V100h-3.5h-43.5V53.5z M173.1,106.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C174.7,110,173.1,108.4,173.1,106.5z M226.6,110 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C230.1,108.4,228.5,110,226.6,110z M236.6,57h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S238.5,57,236.6,57z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#EEEEEE",
            "points": "217.9,54.6 214.8,57.7 211.7,54.6 209.6,56.7 212.7,59.8 209.7,62.9 211.8,65 214.8,61.9 217.9,65 220,62.9 217,59.8 220.1,56.7 	",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M203.1,84.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C204.4,82.9,203.9,83.8,203.1,84.8z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M205.4,70.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C206.5,67,205.7,68.4,205.4,70.1z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M208.3,74.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V74.3z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M197.6,85.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S200.3,85.9,197.6,85.9z M197.6,92.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S198.6,92.8,197.6,92.8z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
